@@ -467,7 +467,7 @@ with an integer pid. For more information about ionice, see \fBionice\fR(1).
 Set this variable to an empty string if you do not want portage to call
 ionice.
 .br
-Defaults to "ionice -c 2 -n 7 -p \\${PID}".
+Defaults to "ionice -c 3 -p \\${PID}".
 .TP
 \fBPORTAGE_NICENESS\fR = \fI[number]\fR
 The value of this variable will be added to the current nice level that
